# gai-yolov12

./: .gitignore  README.md  RESUME_TRAINING.md  config.yaml  config_augs.yaml  main.py  pyproject.toml  test_resume.py
configs/: config.yaml  config_bak.yaml  config_large.yaml  config_large_002.yaml  config_large_003.yaml
docs/: CONFIGURATION_GUIDE.md  metadata_generation.md
experiments/gai-yolo12-bdd100k/metadata/: dataloader_config_snapshot.json
models/: __init__.py  backbones.py  factory.py  losses.py  targets.py  yolov12.py
tests/: test_converter_visualization.py  test_dataloader_augmentations.py  test_models_factory.py  test_training_engine.py
train/: __init__.py  engine.py
utils/: converter.py  dataloader.py  utils.py
